--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,9 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js"
   },
+  "engines": {
+    "node": ">=18.16.0 <19.0.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
